# demo

./: .gitignore  LICENSE  README.md
hermes-node-api/greeter/: README.md  build-all.ps1  build-hermes-cli.ps1  start-vs-code.ps1
hermes-node-api/greeter/c-api/: README.md  binding.gyp  greeter.c  hello.cjs  hello.js  index.cjs  index.js  package-lock.json  package.json
hermes-node-api/greeter/common/: README.md  index.js  jsEngineInfo.cjs  module_info.cpp  package.json
hermes-node-api/greeter/cpp-api/: README.md  binding.gyp  greeter.cc  package-lock.json  package.json
hermes-node-api/greeter/cs-api/: README.md  greeter.cs  greeter.csproj  hello.cjs  hello.js  module_info.cs  package-lock.json  package.json
hermes-node-api/greeter/cs-api/Properties/: launchSettings.json
hermes-node-api/greeter/hermes-cli/: .gitignore  CMakeLists.txt  README.md  build-hermes-cli.ps1  hermes-cli.def  main.cpp  node_lite.cpp  test.js  threadsafe_function.cpp
